<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/fpsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawable="@style/Widget.Material3.Snackbar.TextView"
            android:text="@string/settings_fps" />

        <SeekBar
            android:id="@+id/fps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawable="@style/Widget.Material3.Slider"
            android:max="165" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawable="@style/Widget.Material3.Snackbar.TextView"
            android:text="@string/settings_hw_accel" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawable="@style/Widget.Material3.Snackbar.TextView"
            android:text="@string/settings_presets" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Spinner
            android:id="@+id/hwaccel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </Spinner>

        <Spinner
            android:id="@+id/presets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawable="@style/Widget.Material3.Snackbar.TextView"
            android:text="@string/settings_mi_mode" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawable="@style/Widget.Material3.Snackbar.TextView"
            android:text="@string/settings_mc_mode" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/mi_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </Spinner>

        <Spinner
            android:id="@+id/mc_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawable="@style/Widget.Material3.Snackbar.TextView"
            android:text="@string/settings_me" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawable="@style/Widget.Material3.Snackbar.TextView"
            android:text="@string/settings_me_mode" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Spinner
            android:id="@+id/me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone">

        </Spinner>

        <Spinner
            android:id="@+id/me_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawable="@style/Widget.Material3.Snackbar.TextView"
            android:gravity="center"
            android:text="@string/settings_custom_filters" />

        <EditText
            android:id="@+id/customFilters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawable="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
            android:hint=":filter1=test:filter2=test2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawable="@style/Widget.Material3.Snackbar.TextView"
            android:gravity="center"
            android:text="@string/settings_custom_parameters" />

        <EditText
            android:id="@+id/customParams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawable="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
            android:hint="-params1 1 -params2 2" />

    </LinearLayout>

</LinearLayout>