<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:padding="16dp">

    <LinearLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:gravity="center"
         android:orientation="vertical">

        <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_marginBottom="11dp"
             android:gravity="center"
             android:orientation="vertical">

            <ImageView
                 android:layout_height="100dp"
                 android:layout_width="100dp"
                 android:layout_marginBottom="11dp"
                 android:src="@drawable/ic_launcher"
                 android:id="@+id/appIcon" />

            <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textSize="15dp"
                 android:id="@+id/subHeaderText"
                 android:text="@string/app_name" />

        </LinearLayout>

        <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:gravity="center"
             android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:id="@+id/selectVideoButton"
                 android:text="@string/select_button" />

            <com.google.android.material.button.MaterialButton
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:clickable="false"
                 android:id="@+id/startProcessingButton"
                 android:text="@string/start_process" />

            <com.google.android.material.button.MaterialButton
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:id="@+id/settingsButton"
                 android:text="@string/settings" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>